--- a/Views/Clientes/EditarClient.cshtml
+++ b/Views/Clientes/EditarClient.cshtml
@@ -10,6 +10,8 @@
 
 <form asp-action="Edit" method="post">
     @Html.AntiForgeryToken()
+    <input type="hidden" asp-for="Id" />
+
     <div class="form-group">
         @Html.LabelFor(model => model.Nombre)
         @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
